--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: blueprint
-Version: 0.1.0
+Version: 0.2.0
 Title: create models easily
 Description: design model specifications from a simple interface 
 Authors@R: person("devin", "pastoor", email = "devin.pastoor@gmail.com", role = c("aut", "cre"))
@@ -14,4 +14,6 @@ Imports:
     dplyr (>= 0.5.0),
     rlang,
     purrr,
-    mrgsolve
+    mrgsolve,
+    R6,
+    magrittr
