major update to blueprint class
fix return type for add_heirarchy given shorthand notation

implement adding residual error

export constants and pluralize omegas and sigmas for return elements

implement render functionality

control data, templates, and datapath via active bindings so don't need explicit getters/setters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,16 @@
 
 export("%>%")
 export(Blueprint)
+export(block)
+export(const)
+export(is_dir)
+export(load_nonmem_partials)
+export(load_nonmem_templates)
+export(omega_param)
 export(param)
+export(sigma_param)
+export(stringify_matrix)
+export(strip_names)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(purrr,is_list)
