redoc and add a testing mrgsolve rmd file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(Blueprint)
 export(block)
 export(const)
 export(is_dir)
-export(load_nonmem_partials)
-export(load_nonmem_templates)
+export(load_partials)
+export(load_templates)
 export(omega_param)
 export(param)
 export(sigma_param)
