--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export("%>%")
 export(Blueprint)
+export(Parameter)
 export(block)
 export(const)
 export(is_dir)
 export(load_partials)
 export(load_templates)
 export(omega_param)
-export(param)
 export(sigma_param)
 export(stringify_matrix)
 export(strip_names)
@@ -17,5 +17,6 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,is_list)
 importFrom(purrr,is_numeric)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,map_dbl)
 importFrom(purrr,set_names)
