--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,11 @@ export(stringify_matrix)
 export(strip_names)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
+importFrom(purrr,discard)
 importFrom(purrr,is_list)
 importFrom(purrr,is_numeric)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_dbl)
+importFrom(purrr,map_lgl)
 importFrom(purrr,set_names)
