--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,10 @@ export(strip_names)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(purrr,discard)
+importFrom(purrr,flatten)
 importFrom(purrr,is_list)
 importFrom(purrr,is_numeric)
+importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_dbl)
