--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export("%>%")
 export(Blueprint)
-export(Parameter)
 export(block)
 export(const)
 export(is_dir)
 export(load_partials)
 export(load_templates)
 export(omega_param)
+export(parameter)
 export(sigma_param)
 export(stringify_matrix)
 export(strip_names)
