docs and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export("%>%")
 export(Blueprint)
 export(block)
 export(const)
+export(constants)
 export(covariate_relationships)
 export(fixed)
+export(from_path)
+export(heirarchies)
 export(is_dir)
 export(link)
 export(load_partials)
@@ -22,21 +25,26 @@ export(lower_bound)
 export(name)
 export(omega_param)
 export(parameter)
+export(parameters)
+export(render)
+export(residual_error)
 export(sigma_param)
 export(stringify_matrix)
 export(strip_names)
 export(update)
 export(upper_bound)
+export(use_template)
 export(value)
+export(with_data)
 importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(purrr,discard)
 importFrom(purrr,flatten)
 importFrom(purrr,is_list)
-importFrom(purrr,is_numeric)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_lgl)
 importFrom(purrr,set_names)
+importFrom(rlang,is_bare_numeric)
