--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ LazyData: true
 RoxygenNote: 6.0.1
 Suggests: 
     debugme,
-    testthat
+    testthat,
+    covr
 Imports: 
     dplyr (>= 0.5.0),
     mrgsolve,
