--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,3 +48,4 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_lgl)
 importFrom(purrr,set_names)
 importFrom(rlang,is_bare_numeric)
+importFrom(utils,modifyList)
