--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: blueprint
 Version: 0.4.0
 Title: create models easily
-Description: design model specifications from a simple interface 
+Description: Design model specifications from a simple, consistent API.
 Authors@R: person("devin", "pastoor", email = "devin.pastoor@gmail.com", role = c("aut", "cre"))
 Depends: R (>= 3.1.2)
-License: MIT + file license 
+License: MIT + file LICENSE 
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
@@ -14,6 +14,7 @@ Suggests:
     covr
 Imports: 
     dplyr (>= 0.5.0),
+    glue,
     mrgsolve,
     magrittr,
     purrr,
