--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(constants)
 export(covariate_relationships)
 export(fixed)
 export(from_path)
+export(get_residual_error_eqn)
 export(heirarchies)
 export(is_dir)
 export(link)
