--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(upper_bound,parameter)
 S3method(value,parameter)
 export("%>%")
 export(Blueprint)
+export(available_models)
 export(block)
 export(const)
 export(constants)
@@ -25,6 +26,7 @@ export(link)
 export(load_partials)
 export(load_templates)
 export(lower_bound)
+export(model_type)
 export(name)
 export(omega_param)
 export(parameter)
