add pipeline functions for accept and ignore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(upper_bound,parameter)
 S3method(value,parameter)
 export("%>%")
 export(Blueprint)
+export(accept)
 export(available_models)
 export(block)
 export(const)
@@ -21,6 +22,7 @@ export(fixed)
 export(from_path)
 export(get_residual_error_eqn)
 export(heirarchies)
+export(ignore)
 export(is_dir)
 export(link)
 export(load_partials)
