--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(covariate_relationships)
 export(fixed)
 export(from_path)
 export(get_residual_error_eqn)
-export(heirarchies)
+export(hierarchies)
 export(ignore)
 export(is_dir)
 export(link)
