--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(fixed)
 export(from_path)
 export(get_residual_error_eqn)
 export(hierarchies)
+export(hooks)
 export(ignore)
 export(is_dir)
 export(link)
