blueprint parameter implementation and starting tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(lower_bound,parameter)
 S3method(name,parameter)
 S3method(names,block)
 S3method(names,sigma)
+S3method(parameters,blueprint)
+S3method(parameters,nonmem_blueprint)
 S3method(update,parameter)
 S3method(upper_bound,parameter)
 S3method(value,parameter)
@@ -31,6 +33,7 @@ export(load_templates)
 export(lower_bound)
 export(model_type)
 export(name)
+export(new_blueprint)
 export(omega_param)
 export(parameter)
 export(parameters)
